--- a/app/client/main.html
+++ b/app/client/main.html
@@ -3,6 +3,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manoa Fixed</title>
+  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 </head>
 
 <body style='background: green'>
